# casocklib

./: TODO  configure.ac
src/casock/rpc/asio/protobuf/client/: Makefile.am  RPCChannel.cc  RPCChannel.h  RPCClientCommunicator.cc  RPCClientCommunicator.h  RPCClientProxy.cc  RPCClientProxy.h  RPCSocketClient.cc  RPCSocketClient.h  RPCSocketClientFactory.h  RPCSocketClientFactoryImpl.h  RPCSocketClientImpl.cc  RPCSocketClientImpl.h
src/casock/rpc/protobuf/client/: Makefile.am  RPCCall.h  RPCCallController.h  RPCCallHandler.cc  RPCCallHandler.h  RPCCallHandlerFactory.h  RPCCallHandlerFactoryImpl.cc  RPCChannel.cc  RPCChannel.h  RPCClientCommunicator.cc  RPCClientCommunicator.h  RPCClientProxy.cc  RPCClientProxy.h  RPCReaderHandler.cc  RPCRequestBuilder.cc  RPCResponseHandler.h
src/casock/rpc/protobuf/server/: Makefile.am  RPCCall.h  RPCCallHandler.h  RPCCallQueue.h  RPCCallResponseHandler.h  RPCServerCommunicator.h  RPCServerProxy.cc  RPCServerProxy.h  RPCService.h
src/examples/rpc/: Makefile.am
src/examples/rpc/asio/: rpcclient.cc  rpcserver.cc
src/examples/rpc/sigio/: Makefile.am  rpcserver.cc
src/tests/rpc/asio/protobuf/: Makefile.am  Test1ResponseHandlerImpl.h  Test1ServiceImpl.h  Test2ClientThread.h  Test2Manager.cc  Test2ResponseHandlerImpl.cc  Test2ResponseHandlerImpl.h  Test2ShutdownResponseHandlerImpl.cc  test1_cxx.h  test2_cxx.h
src/tests/rpc/protobuf/api/: Makefile.am  rpc_test.proto
trunk/: TODO  configure.ac
trunk/doc/: casocklib.asta
trunk/src/casock/: Makefile.am
trunk/src/casock/base/: CASClosedConnectionException.h  CASException.h  Communicator.cc  Dispatcher.cc  Dispatcher.h  FileDescriptor.h  Handler.h  Socket.cc  SocketReader.cc
trunk/src/casock/client/: ClientSocket.cc  ClientSocket.h
trunk/src/casock/proactor/asio/base/: AsyncProcessor.cc  Buffer.cc  Buffer.h  Communicator.h  Makefile.am  SocketChannel.cc  SocketChannel.h
trunk/src/casock/proactor/asio/client/: SocketClient.cc  SocketClient.h
trunk/src/casock/proactor/asio/server/: SocketServer.cc  SocketServer.h  SocketSession.cc  SocketSession.h
trunk/src/casock/rpc/asio/protobuf/base/: RPCCommunicator.cc  RPCCommunicator.h
trunk/src/casock/rpc/asio/protobuf/client/: Makefile.am  RPCChannel.cc  RPCChannel.h  RPCClientCommunicator.cc  RPCClientCommunicator.h  RPCClientProxy.cc  RPCClientProxy.h  RPCSocketClient.cc  RPCSocketClient.h  RPCSocketClientFactoryImpl.cc  RPCSocketClientFactoryImpl.h  RPCSocketClientImpl.cc
trunk/src/casock/rpc/asio/protobuf/server/: Makefile.am  RPCServerCommunicator.cc  RPCServerCommunicator.h  RPCServerProxy.cc  RPCServerProxy.h  RPCSocketServer.cc  RPCSocketServer.h  RPCSocketSession.cc  RPCSocketSession.h
trunk/src/casock/rpc/protobuf/: Makefile.am
trunk/src/casock/rpc/protobuf/base/: CASRPCException.h  CASRPCUnfinishedMessageException.h  RPCCommunicator.cc
trunk/src/casock/rpc/protobuf/client/: Makefile.am  RPCCall.h  RPCCallController.cc  RPCCallHandler.cc  RPCCallHandler.h  RPCCallHandlerFactoryImpl.h  RPCCallHandlerImpl.cc  RPCCallHandlerImpl.h  RPCCallHash.h  RPCCallQueue.h  RPCCallTimeoutHandler.h  RPCChannel.h  RPCClientProxy.cc  RPCClientProxy.h  RPCReaderHandler.cc  RPCReaderHandler.h  RPCRequestBuilder.cc  RPCRequestBuilder.h  RPCResponseHandler.h  RPCResponseNotifier.h
trunk/src/casock/rpc/protobuf/server/: RPCAcceptorHandler.cc  RPCAcceptorHandler.h  RPCCall.cc  RPCCall.h  RPCCallHandler.cc  RPCCallHandler.h  RPCCallQueue.h  RPCCallResponseHandler.h  RPCReaderHandler.cc  RPCReaderHandler.h  RPCServerCommunicator.cc  RPCServerProxy.cc  RPCServerProxy.h  RPCService.cc
trunk/src/casock/rpc/sigio/protobuf/client/: Makefile.am  RPCChannel.cc  RPCChannel.h  RPCClientCommunicator.cc  RPCClientCommunicator.h  RPCClientProxy.cc  RPCClientProxy.h  RPCReaderHandler.cc  RPCReaderHandler.h
trunk/src/casock/rpc/sigio/protobuf/server/: Makefile.am  RPCAcceptorHandler.cc  RPCAcceptorHandler.h  RPCReaderHandler.h  RPCServerCommunicator.h  RPCServerProxy.h
trunk/src/casock/server/: Makefile.am  ServerSocket.cc  ServerSocket.h  SockAcceptorHandler.h
trunk/src/casock/sigio/base/: FileDescriptor.cc
trunk/src/casock/sigio/client/: Makefile.am
trunk/src/casock/util/: Buffer.cc  Buffer.h  Lockable.cc  Lockable.h  Logger.cc  Logger.h  RWLockable.cc  RWLockable.h  SafeRLock.h  SafeTryLock.h  Thread.cc  Thread.h  types.h
trunk/src/examples/: ClientSockReaderHandler.cc  ServerSockReaderHandler.cc  ServerSockReaderHandler.h  client.cc  server.cc
trunk/src/examples/ftp/: FTPClientSockReaderHandler.cc  FTPClientSockReaderHandler.h  FTPCommunicator.h  FTPFile.h  FTPServerSockAcceptorHandler.cc  FTPServerSockReaderHandler.cc  FTPServerSockReaderHandler.h  Makefile.am  ftpclient.cc  ftpserver.cc
trunk/src/examples/proactor/asio/: MySocketClient.h  MySocketServer.h  MySocketSession.h
trunk/src/examples/proactor/asio/ftp/: FTPCommunicator.h  FTPFile.h  FTPSocketClient.h  FTPSocketServer.h  FTPSocketSession.h  ftpserver.cc
trunk/src/examples/rpc/: Makefile.am  rpcclient.cc  rpcserver.cc
trunk/src/examples/rpc/asio/: Makefile.am  rpcclient.cc  rpcserver.cc
trunk/src/examples/rpc/sigio/: rpcclient.cc  rpcserver.cc
trunk/src/tests/: Makefile.am
trunk/src/tests/casock/rpc/asio/protobuf/: Makefile.am  Test2ClientThread.cc  Test2Manager.h  Test2ResponseHandlerImpl.h  Test2ServiceImpl.h  Test2ShutdownResponseHandlerImpl.h  test2_cxx.h
trunk/src/tests/casock/rpc/protobuf/client/: Makefile.am  RPCClientProxyStub.h  RPCResponseHandlerMock.h  test_RPCCallTimeoutHandler.cc
trunk/src/tests/proactor/asio/: SocketClient1.h  SocketSession1.h  server1.cc
trunk/src/tests/rpc/asio/: Makefile.am
trunk/src/tests/rpc/asio/protobuf/: Makefile.am  Test1ResponseHandlerImpl.h  Test1ServiceImpl.h  Test2ClientThread.cc  Test2ClientThread.h  Test2Manager.h  test1_cxx.h  test2_cxx.h
trunk/src/tests/rpc/protobuf/api/: rpc_test1.proto
trunk/src/tests/rpc/protobuf/client/: Makefile.am  RPCCallHandlerFactoryMock.h  RPCCallHandlerFactoryStub.h  RPCCallHandlerMock.cc  RPCClientProxyTest.h  test_RPCClientProxy_cxx.h  test_RPCRequestBuilder_cxx.h
(+114 files in other folders)
